# TAR_P3

./: README.md
Parte_1/catkin_ws/src/slam_pkg/Maps/: mapaBot.pgm  mapaBot.yaml  mapaObstaculos.pgm  mapaObstaculos.yaml  parte1Ejercicio2.pgm  parte1Ejercicio2.yaml  world2ParametrosCambiados.pgm  world2ParametrosCambiados.yaml
Parte_1/catkin_ws/src/slam_pkg/worlds/: parte1_ejercicio2.world
Parte_2/: README.md  run_nvidia.sh
Parte_2/ros2_ws/install/pruebaPregunta2/share/pruebaPregunta2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Parte_2/ros2_ws/install/service_temp/lib/service_temp/: service_temp_client  service_temp_server
Parte_2/ros2_ws/install/service_temp/share/service_temp/: package.xml
Parte_2/ros2_ws/install/srv_service_temp/share/srv_service_temp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Parte_2/ros2_ws/install/srv_service_temp/share/srv_service_temp/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_srv_service_temp__rosidl_generator_cExport-noconfig.cmake  export_srv_service_temp__rosidl_generator_cExport.cmake  export_srv_service_temp__rosidl_generator_cppExport.cmake  export_srv_service_temp__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+6 more)
Parte_2/ros2_ws/log/: latest_build
Parte_2/ros2_ws/src/battery_act/: CMakeLists.txt  battery_charger.py  battery_client.py
Parte_2/ros2_ws/src/pruebaPregunta2/: package.xml  setup.cfg  setup.py
Parte_2/ros2_ws/src/service_temp/: CMakeLists.txt  setup.py
Parte_2/ros2_ws/src/srv_service_temp/: CMakeLists.txt  package.xml  setup.cfg  setup.py
(+18 files in other folders)
